<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/black"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"/>
    <TextView
        android:id="@+id/onBoardMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_margin="30dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/get_on_board"
        android:textColor="@color/white"
        android:textSize="40sp"
        />
    <EditText
        android:id="@+id/fullNameInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:layout_margin="20dp"
        android:backgroundTint="#CDC9C9"
        android:textColor="#FFFFFF"
        android:textColorHint="#EFE6E6"
        android:drawableLeft="@drawable/ic_outline_account_circle_24"
        android:drawableStart="@drawable/ic_outline_account_circle_24"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/signUpEmailInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_margin="20dp"
        android:backgroundTint="#CDC9C9"
        android:textColor="#FFFFFF"
        android:textColorHint="#EFE6E6"
        android:drawableStart="@drawable/ic_outline_email_24"
        android:drawableLeft="@drawable/ic_outline_email_24"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/signUpPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        android:backgroundTint="#CDC9C9"
        android:textColor="#FFFFFF"
        android:textColorHint="#EFE6E6"
        android:drawableStart="@drawable/ic_outline_lock_24"
        android:drawableLeft="@drawable/ic_outline_lock_24"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        android:backgroundTint="#CDC9C9"
        android:textColor="#FFFFFF"
        android:textColorHint="#EFE6E6"
        android:drawableStart="@drawable/ic_outline_verified_24"
        android:drawableLeft="@drawable/ic_outline_verified_24"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_margin="20dp"
        android:backgroundTint="#CDC9C9"
        android:textColor="#FFFFFF"
        android:textColorHint="#EFE6E6"
        android:drawableStart="@drawable/ic_outline_phone_24"
        android:drawableLeft="@drawable/ic_outline_phone_24"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/plateNoInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/license_plate_no"
        android:inputType="text"
        android:layout_margin="20dp"
        android:backgroundTint="#CDC9C9"
        android:textColor="#FFFFFF"
        android:textColorHint="#EFE6E6"
        android:drawableStart="@drawable/ic_outline_directions_car_24"
        android:drawableLeft="@drawable/ic_outline_directions_car_24"
        android:drawablePadding="10dp"
        />
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/customizeBlue"
        android:backgroundTint="@null"
        android:text="Submit"/>

</LinearLayout>