<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/loginbg">

    <ImageView
        android:id="@+id/parkingLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="@string/parking_logo"
        android:src="@drawable/parking_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hello_there_welcome_back"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkingLogo" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:backgroundTint="#CDC9C9"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#EFE6E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMsg" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:backgroundTint="#CDC9C9"
        android:hint="@string/password"
        android:textColor="#FFFFFF"
        android:textColorHint="#EFE6E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput"
        android:inputType="textPassword"/>
<!--    <Button-->
<!--        android:id="@+id/logInButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="40dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/passwordInput"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:layout_margin="50dp"-->
<!--        android:text="@string/sign_in"/>-->
    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="50dp"
        android:layout_marginTop="50dp"
        android:background="@color/customizeBlue"
        android:backgroundTint="@null"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInput" />

    <TextView
        android:id="@+id/noAccountMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:text="Don't have an account?"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logInButton" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toEndOf="@id/noAccountMsg"
        app:layout_constraintTop_toBottomOf="@id/logInButton" />

</androidx.constraintlayout.widget.ConstraintLayout>